<resources>
    <string name="app_name">PracticaParking</string>
    <string name="backbutton">backbutton</string>
    <string name="qrbutton">qrbutton</string>
    <string name="listbutton">listbutton</string>
    <string name="vehiclebutton">vehiclebutton</string>
    <string name="textview">TextView</string>
    <string name="Email">Email</string>
    <string name="Password">Password</string>
    <string name="slogan">Easy, fast, coinless</string>
    <string name="appTitle">P A R K   I T!</string>
    <string name="title_activity_firstmenu_activity">Map</string>
    <string name="title_activity_first_menu">Map</string>
    <string name="miniTitle">PARK IT!</string>
    <string name="burguer_button">burguer button</string>
    <string name="Forgotten_Password">Forgot password?</string>
    <string name="sign_up">Sign up</string>
    <string name="RepeatPassword">Repeat password</string>
    <string name="Location">Location</string>
    <string name="creditcard">Credit card</string>
    <string name="paypal">Paypal</string>
    <string name="title_activity_navigation">navigation</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="password">Password</string>
    <string name="repeat_password">Repeat password</string>
    <string name="location">Location</string>
    <string name="email">Email</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="order_by">Order by</string>
    <string name="oder_by">Oder by</string>
    <string name="type">Type</string>
    <string name="price">Price</string>
    <string name="name_and_surname">Name and surname</string>
    <string name="paypal_email_com">paypal@email.com</string>
    <string name="tvparkingname">tvParkingName</string>
    <string name="title_activity_slot_info">SlotInfoActivity</string>
    <string name="state">State</string>
    <string name="color">Color</string>
    <string name="name">Name</string>

</resources>
